tests/snapshot/error/stack_trace/non_error/for_of_close_rethrow.js
const iter = {
    [Symbol.iterator]() {
        return {
            next() { return { value: 1, done: false }; },
            return() {
                throw 42;
            }
        };
    }
};

for (const x of iter) {
    break;
}
